# app/api/controllers/tournaments/update_tournament.go
@@ -2,14 +2,12 @@ package tournaments
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/pkg/errors"
 	"github.com/rs/zerolog"
 	"tournament_gateway/app/api/controllers/tournaments/requests"
 	"tournament_gateway/app/api/request_factory"
 	"tournament_gateway/app/api/response_error"
 	"tournament_gateway/app/api/response_factory"
 	"tournament_gateway/app/api/response_success"
-	"tournament_gateway/models/tournaments"
 )
 
 type UpdateTournament struct {
@@ -23,7 +21,7 @@ func NewUpdateTournament(service Service, logger *zerolog.Logger) *UpdateTournam
 
 func (s *UpdateTournament) HTTPHandler(c *gin.Context) {
 	tournamentAlias := c.Param("tournament_alias")
-	updateRequest := requests.UpdateTournamentRequest{}
+	updateRequest := requests.TournamentRequest{}
 	err := request_factory.ReadJSONRequestBody(c, &updateRequest)
 	if err != nil {
 		s.logger.Err(err).Msg("update tournament request")
@@ -48,19 +46,9 @@ func (s *UpdateTournament) HTTPHandler(c *gin.Context) {
 
 	ts, err := s.service.UpdateTournament(c.Request.Context(), *t)
 	if err != nil {
-		s.logger.Err(err).Msg("save tournament") //todo 404
+		s.logger.Err(err).Msg("save tournament") //todo duplicate
 		response_factory.ReturnError(c, response_error.Internal)
 		return
 	}
 	response_factory.ReturnSuccess(c, response_success.FromTournamentResponse(ts))
-}
-
-func getGender(genderRequest string) (tournaments.TournamentGender, error) {
-	switch genderRequest {
-	case "male":
-		return tournaments.TournamentGenderMale, nil
-	case "female":
-		return tournaments.TournamentGenderFemale, nil
-	}
-	return tournaments.TournamentGenderUndefined, errors.New("gender undefined")
 }
